included jenkins file

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,14 @@ pipeline {
             post {
                 always {
                     junit 'target/surefire-reports/*.xml'
+                    step( [ $class: 'JacocoPublisher' ] )
                 }
+            }
+        }
+        stage('Mutation tests') {
+            steps {
+                echo "-=- execute mutation tests -=-"
+                sh "mvn org.pitest:pitest-maven:mutationCoverage"
             }
         }
         stage('Deliver') {
