added jenkins file

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,6 +5,13 @@ pipeline {
             args '-v /root/.m2:/root/.m2'
         }
     }
+    environment {
+        ORG_NAME = "deors"
+        APP_NAME = "deors-demos-petclinic"
+        APP_CONTEXT_ROOT = "petclinic"
+        TEST_CONTAINER_NAME = "ci-${APP_NAME}-${BUILD_NUMBER}"
+        DOCKER_HUB = credentials("${ORG_NAME}-docker-hub")
+    }    
     stages {
         stage('Build') {
             steps {
